# ml-classification-app

./: README.md  app-prod.py  app.py  config.py  pyproject.toml  setup.py
data/: new_flight_df.csv
models/: dec_tree.joblib  lgbm_model.joblib
notebooks/: app-ml.ipynb  app-prod.ipynb  eda.ipynb  ml.ipynb  preprocessing.ipynb
src/: categorical_encoder.py  example_module.py  feature_importance.py  load_data.py  preprocessing.py  train_evaluate.py
